CHANGES IN VERSION 1.3.8
------------------------
 o update vignettes <2016-01-07, Thu>
 o 05 advance tree annotation vignette <2016-01-04, Mon>
 o export theme_inset <2016-01-04, Mon>
 o inset, nodebar, nodepie functions <2015-12-31, Thu>
 
CHANGES IN VERSION 1.3.7
------------------------
 o split the long vignette to several vignettes
   + 00 ggtree <2015-12-29, Tue>
   + 01 tree data import <2015-12-28, Mon>
   + 02 tree visualization <2015-12-28, Mon>
   + 03 tree view manipulation <2015-12-28, Mon>
   + 04 tree annotation <2015-12-29, Tue>
 
CHANGES IN VERSION 1.3.6
------------------------
 o MRCA function for finding Most Recent Common Ancestor among a vector of tips <2015-12-22, Tue>
 o geom_cladelabel: add bar and label to annotate a clade <2015-12-21, Mon>
   - remove annotation_clade and annotation_clade2 functions.
 o geom_treescale: tree scale layer. (add_legend was removed) <2015-12-21, Mon>
 
CHANGES IN VERSION 1.3.5
------------------------
 o bug fixed, read.nhx now works with scientific notation <2015-11-30, Mon>
   + see https://github.com/GuangchuangYu/ggtree/issues/30

CHANGES IN VERSION 1.3.4
------------------------
 o rename beast feature when name conflict with reserve keywords (label, branch, etc) <2015-11-27, Fri>
 o get_clade_position function <2015-11-26, Thu>
   + https://github.com/GuangchuangYu/ggtree/issues/28
 o get_heatmap_column_position function <2015-11-25, Wed>
   + see https://github.com/GuangchuangYu/ggtree/issues/26
 o support NHX (New Hampshire X) format via read.nhx function <2015-11-17, Tue>
 o bug fixed in extract.treeinfo.jplace <2015-11-17, Thu>
 
CHANGES IN VERSION 1.3.3
------------------------
 o support color=NULL in gheatmap, then no colored line will draw within the heatmap <2015-10-30, Fri>
 o add `angle` for also rectangular, so that it will be available for layout='rectangular' following by coord_polar() <2015-10-27, Tue>
 
CHANGES IN VERSION 1.3.2
------------------------