@@ -10,6 +10,7 @@ S3method(fortify,hyphy)
 S3method(fortify,jplace)
 S3method(fortify,multiPhylo)
 S3method(fortify,nhx)
+S3method(fortify,obkData)
 S3method(fortify,paml_rst)
 S3method(fortify,phangorn)
 S3method(fortify,phylo)
@@ -98,6 +99,7 @@ export(theme_inset)
 export(theme_transparent)
 export(theme_tree)
 export(theme_tree2)
+export(viewClade)
 export(write.jplace)
 exportClasses(apeBootstrap)
 exportClasses(beast)
