@@ -1,5 +1,7 @@
 CHANGES IN VERSION 1.3.8
 ------------------------
+ o add viewClade function <2016-01-12, Tue>
+ o support obkData object defined by OutbreakTools <2016-01-12, Tue>
  o update vignettes <2016-01-07, Thu>
  o 05 advance tree annotation vignette <2016-01-04, Mon>
  o export theme_inset <2016-01-04, Mon>
